UI - Fixed alerts. They were getting hidden behind new page header section

--- a/www/app/styles/app.css
+++ b/www/app/styles/app.css
@@ -308,6 +308,7 @@ body {
   width:100%;
   border-radius: 0px;
   left: 0;
+  top: 57px;
 }
 
 input.ng-dirty.ng-invalid {
